  * man/sslio.8, man/sslsvd.8: remove; obsolete.
  * tcpsvd.c, tcpsvd.dist: remove sslsvd code; obsolete.
  * *ssl*: remove; obsolete.
  * Makefile, TARGETS, check-dist, package/compile, package/upgrade:
    remove support for matrixssl; no longer build sslio, sslsvd programs.
  * doc/upgrade.html: typo.
  * tcpsvd.c, udpsvd.c: print proper group id when verbose.
  * doc/install.html: add link to sha256sum.asc.
  * doc/install.html: change mail address.
  * debian/: remove; obsolete.
  * cdb_make.c, pathexec.h, pathexec_env.c, pathexec_run.c, seek_set.c,
    sgetopt.c, sgetopt.h, subgetopt.c, subgetopt.h, tcpsvd.c, trycpp.c,
    tryflock.c, trypoll.c, trysgact.c, trysgprm.c, tryulong64.c,
    trywaitp.c, udpsvd.c, x86cpuid.c: incorporate lib changes from
    runit-2.2.0 and adapt ipsvd programs to properly build with modern
    toolchains (thx Gentoo, Debian, Void Linux).
  * prot.c, prot.h, chkshsgr.c, tryshsgr.c, hasshsgr.h?, warn-shsgr:
    remove; obsolete.
  * Makefile, TARGETS: no longer check for "shortsetgroups" (thx Leah
    Neukirchen).
  * ssl_io.c, tcpsvd.c, udpsvd.c: replace prot_uid() with setuid().

ipsvd 1.0.0
Sun, 15 Jun 2008 17:45:26 +0000

ipsvd 0.14.0
Sat, 19 Jan 2008 00:17:20 +0000
  * uidgid.c, uidgid.h: support numerical uid, gids through :uid:gid...
    (taken from the runit package).
  * tcpsvd.c, udpsvd.c, sslio.c, ssl_io.c: support numerical uid, gids,
    and colon-separated list of groups through :uid:gid... with the -u,
    -U arguments (thx Nikola Vladov).
  * man/tcpsvd.8, man/udpsvd.8, man/sslsvd.8, man/sslio.8, man/ipsvd.7:
    adapt.

ipsvd 0.13.0
Sun, 26 Aug 2007 11:04:21 +0000
  * ipsvd_check.c, man/ipsvd-instruct.5: lines starting with # are
    comments, ignore them completely.
  * ssl_io.c, man/sslio.8: support env variable SSLIO_BAD_CERTIFICATE to
    optionally accept 'bad certificate's (thx Nikola Vladov).
  * ssl_io.c, man/sslio.8, man/sslsvd.8: support env variable