@@ -25,7 +25,7 @@ If <b>ipsvd-cdb</b> has trouble building the constant database, it exits with
 an error message, and leaves <i>cdb</i> unchanged. 
 <h2><a name='sect3'>See Also</a></h2>
 <i>ipsvd(7)</i>, <i>tcpsvd(8)</i>,
-<i>sslsvd(8)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i> <p>
+<i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i> <p>
 <i>http://smarden.org/ipsvd/</i> 
 <h2><a name='sect4'>Author</a></h2>
 Gerrit
