@@ -143,7 +143,7 @@ through the file <i>127.0.0.1</i> in the instructions directory. </dd>
 
 <h2><a name='sect5'>See Also</a></h2>
 <i>ipsvd(7)</i>,
-<i>ipsvd-cdb(8)</i>, <i>tcpsvd(8)</i>, <i>sslsvd(8)</i>, <i>udpsvd(8)</i>, <i>sslio(8)</i> <p>
+<i>ipsvd-cdb(8)</i>, <i>tcpsvd(8)</i>, <i>udpsvd(8)</i> <p>
 <i>http://smarden.org/ipsvd/</i>
 
 <h2><a name='sect6'>Author</a></h2>
