@@ -77,7 +77,7 @@ implies the -h option. </dd>
 If an <b>ipsvd</b> receives a TERM signal, it exists
 with 0. 
 <h2><a name='sect5'>See Also</a></h2>
-<i>tcpsvd(8)</i>, <i>sslsvd(8)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i>
+<i>tcpsvd(8)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i>
 <p>
 <i>http://smarden.org/ipsvd/</i> 
 <h2><a name='sect6'>Author</a></h2>
