@@ -127,8 +127,7 @@ output. </dd>
 </dl>
 
 <h2><a name='sect4'>See Also</a></h2>
-<i>ipsvd(7)</i>, <i>sslsvd(8)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i>,
-<i>sslio(8)</i> <p>
+<i>ipsvd(7)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i> <p>
 <i>http://smarden.org/ipsvd/</i> 
 <h2><a name='sect5'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
