@@ -117,7 +117,7 @@ verbose. Print more verbose messages to standard output. </dd>
 
 <h2><a name='sect5'>See Also</a></h2>
 <i>ipsvd(7)</i>,
-<i>tcpsvd(8)</i>, <i>sslsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i> <p>
+<i>tcpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i> <p>
 <i>http://smarden.org/ipsvd/</i>
 
 <h2><a name='sect6'>Author</a></h2>
