@@ -39,7 +39,6 @@ unchanged.
 .SH SEE ALSO
 ipsvd(7),
 tcpsvd(8),
-sslsvd(8),
 udpsvd(8),
 ipsvd-instruct(5)
 .P
