@@ -215,9 +215,7 @@ in the instructions directory.
 ipsvd(7),
 ipsvd-cdb(8),
 tcpsvd(8),
-sslsvd(8),
 udpsvd(8),
-sslio(8)
 .P
 http://smarden.org/ipsvd/
 .SH AUTHOR
