@@ -115,7 +115,6 @@ If an
 receives a TERM signal, it exists with 0.
 .SH SEE ALSO
 tcpsvd(8),
-sslsvd(8),
 udpsvd(8),
 ipsvd-instruct(5),
 ipsvd-cdb(8)
