@@ -218,11 +218,9 @@ more verbose.
 Print more verbose messages to standard output.
 .SH SEE ALSO
 ipsvd(7),
-sslsvd(8),
 udpsvd(8),
 ipsvd-instruct(5),
 ipsvd-cdb(8),
-sslio(8)
 .P
 http://smarden.org/ipsvd/
 .SH AUTHOR
