@@ -179,7 +179,6 @@ Print more verbose messages to standard output.
 .SH SEE ALSO
 ipsvd(7),
 tcpsvd(8),
-sslsvd(8),
 ipsvd-instruct(5),
 ipsvd-cdb(8)
 .P
